fix all issue with automation